--- a/src/main.css
+++ b/src/main.css
@@ -4,7 +4,7 @@
   background-position: top center;
   background-attachment: fixed;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   margin: 0;
 }
 
@@ -12,20 +12,20 @@
   background-image: url("./assets/logohome.png");
   background-position: center;
   background-size: contain;
-  width: 100%;
+  width: 40%;
   background-repeat: no-repeat;
-  height: 300px;
+  height: 200px;
   margin: auto;
   position: absolute;
-  top: 50%;
-  margin-top: -150px;
+  top: 1%;
+  right: 32%;
 }
 
 .arrow {
   text-align: center;
   margin: 0;
   position: absolute;
-  bottom: 30px;
+  bottom: 15%;
   left: 50%;
 }
 
