--- a/src/main.scss
+++ b/src/main.scss
@@ -1,13 +1,14 @@
-.header {
-    background-image: url('./assets/Kebabhomepage.jpg');
-    background-size: cover;
+.page-header {
+    background-image: url('./assets/homepage.jpg');
+    background-repeat:no-repeat;
+    background-size:100% 100%;
     background-position: top center;
     background-attachment: fixed;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     margin: 0;
 }
-.logo {
+.logo-header {
     background-image: url('./assets/logohome.png');
     background-position: center;
     background-size: contain;
@@ -28,7 +29,7 @@
     left: 50%;
 }
 .arrow-property {
-    border: solid red;
+    border: solid whitesmoke;
     border-top-width: medium;
     border-right-width: medium;
     border-bottom-width: medium;
@@ -53,4 +54,20 @@
   60% {
     transform: translateY(-15px);
   }
+}
+.menu-item {
+  padding: 1em;
+  color: #2d2d2d;
+}
+.about-img {
+  margin: 10px auto;
+  border-radius: 50%;
+  height: 90%;
+  width: 95%;
+}
+
+.about-p {
+  height: 100%;
+  width: 100%;
+  padding-top: 8%;
 }
