--- a/src/main.scss
+++ b/src/main.scss
@@ -59,15 +59,26 @@
   padding: 1em;
   color: #2d2d2d;
 }
+
+li {
+  cursor: pointer;
+}
 .about-img {
   margin: 10px auto;
   border-radius: 50%;
   height: 90%;
   width: 95%;
 }
+.menu-image {
+  height: 14rem;
+}
 
 .about-p {
   height: 100%;
   width: 100%;
   padding-top: 13%;
+}
+
+.activeheader {
+  background-color: white;
 }
