--- a/src/main.scss
+++ b/src/main.scss
@@ -1,43 +1,44 @@
+@import '~bootstrap/scss/bootstrap';
 .page-header {
-    background-image: url('./assets/homepage.jpg');
-    background-repeat:no-repeat;
-    background-size:100% 100%;
-    background-position: top center;
-    background-attachment: fixed;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
+  background-image: url('./assets/homepage.jpg');
+  background-repeat:no-repeat;
+  background-size:100% 100%;
+  background-position: top center;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
 }
 .logo-header {
-    background-image: url('./assets/logohome.png');
-    background-position: center;
-    background-size: contain;
-    width: 40%;
-    background-repeat: no-repeat;
-    height: 200px;
-    margin: auto;
-    position: absolute;
-    top: 1%;
-    right: 32%;
+  background-image: url('./assets/logohome.png');
+  background-position: center;
+  background-size: contain;
+  width: 40%;
+  background-repeat: no-repeat;
+  height: 200px;
+  margin: auto;
+  position: absolute;
+  top: 1%;
+  right: 32%;
 }
 
 .arrow {
-    text-align: center;
-    margin: 0;
-    position: absolute;
-    bottom: 15%;
-    left: 50%;
+  text-align: center;
+  margin: 0;
+  position: absolute;
+  bottom: 15%;
+  left: 50%;
 }
 .arrow-property {
-    border: solid whitesmoke;
-    border-top-width: medium;
-    border-right-width: medium;
-    border-bottom-width: medium;
-    border-left-width: medium;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-    transform: rotate(45deg);
+  border: solid whitesmoke;
+  border-top-width: medium;
+  border-right-width: medium;
+  border-bottom-width: medium;
+  border-left-width: medium;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
 }
 
 .bounce {
